@@ -1,4 +1,5 @@
 Sigil v0.1.1 <ADD DATE>
+	- applied provided patch for NetBSD support
 	- fixed issue with loading images in HTML and EPUB docs that have regexp special characters
 	in filenames. (issue #39)
 	- if headings have the 'title' attribute set, it is now used as the TOC text entry. (issue #26)
